# vsql-stat-ch

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TESTING.md  build.sh  manifest.json  test.sh
.github/workflows/: ci.yml
cmake/: FindVillageSQL.cmake
mysql-test/r/: ch_native.result  ch_native_live.result  http_transport.result  http_transport_live.result
mysql-test/schema/: events_raw.sql
mysql-test/t/: ch_native.test  ch_native_live.test  http_transport.test  http_transport_live.test  suite.opt
schema/: events_raw.sql
src/: ch_native_sink.cc  ch_native_sink.h  clickhouse_c_impl.c  extension.cc  http_sink.cc  http_sink.h  transport_sink.h
